# pd.dummies

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
dummies/: compare.pd  connected~-help.pd  crash-help.pd  ktest2~.pd  ktest4~.pd  ktest5~.pd  ktest~.pd  leeloo~-help.pd  maxicatch~-help.pd  meanblock~-cpu.pd  meanblock~-cpu2.pd  meanblock~-help.pd  multisig~.pd  pak-help.pd  paverage~-cpu.pd  paverage~-cpu2.pd  paverage~-help.pd  senil.pd  tabosco~-help.pd  vbap-help.pd  wrap_overshoot~-help.pd
src/: connected_tilde.c  crash.c  kgen_tilde.c  kop_tilde.c  leeloo_tilde.c  max2pd.h  maxicatch_tilde.c  meanblock_tilde.c  multisig_tilde.c  pak.c  pak2.c  paverage_tilde.c  print_error.c  rotilt_tilde.c  senil.c  tabosco_tilde.c  vbap.c  vbap_old.c  vbap_old.h  wrap_overshoot_tilde.c
tests/: connected~-test.pd  dummies-test.pd  pak-test.pd
